fix(stepper): corrects invalid button color border to match field in windows high contrast mode

--- a/components/stepper/index.css
+++ b/components/stepper/index.css
@@ -314,6 +314,7 @@
 			--highcontrast-stepper-border-color-focus: Highlight;
 			--highcontrast-stepper-border-color-focus-hover: Highlight;
 			--highcontrast-stepper-border-color-keyboard-focus: Highlight;
+			--highcontrast-infield-button-border-color: Highlight;
 		}
 	}
 }
